Fixed text overflowing out of dropdowns

--- a/app/assets/stylesheets/ui/dropdowns/dropdowns.css
+++ b/app/assets/stylesheets/ui/dropdowns/dropdowns.css
@@ -3,6 +3,7 @@
   right: 0;
   top: 100%;
   min-width: 170px;
+  width: min-content;
   display: block;
   visibility: hidden;
   opacity: 0;
